lighttpd/lighttpd-1.4.68/futag-fuzz-drivers/failed/buffer_copy_path_len2/buffer_copy_path_len23/buffer_copy_path_len23.err
/home/futag/Futag-tests/lighttpd/lighttpd-1.4.68/.futag-fuzz-drivers/buffer_copy_path_len2/buffer_copy_path_len23/buffer_copy_path_len23.c:24:31: error: use of undeclared identifier 'dyn_size'
    size_t sz_len1 = (size_t) dyn_size[-1];
                              ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
2 errors generated.
